bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: missing parameter type
  if (((a<=20) && (a=>10)) && ((b>=10) &&(b<=20))) {
                   ^